--- a/assets/css/headers.scss
+++ b/assets/css/headers.scss
@@ -31,7 +31,7 @@
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
-    opacity: @include 85;
+    opacity: .85;
   }
   .tagline a {
     color: #fff;
@@ -121,7 +121,7 @@
     font-size: 15px;
     line-height: 1.3em;
     font-weight: 400;
-    opacity: @include 45;
+    opacity: .45;
     margin-top: 5px;
     letter-spacing: 0;
   }
@@ -203,7 +203,7 @@
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
-    opacity: @include 85;
+    opacity: .85;
   }
   .small {
     font-size: 0.9em;
