--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -1,12 +1,3 @@
-/*************************************************************************
-
-
-
-                             Portfolio styles
-
-
-
-**************************************************************************/
 .portfolio-filters {
   list-style: none;
   li {
@@ -71,12 +62,10 @@
       height: 75px;
       background: $bg-accent;
       padding: 1em;
-      -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 1000;
-      @include transition-transform(0.35s);
-      .translate3d
-    (0, 100 %, 0);
+      transition: transform 0.35s;
+      transform: translate3d(0, 100%, 0);
       &::before, &::after {
         pointer-events: none;
       }
@@ -91,17 +80,15 @@
       font-weight: bold;
       text-transform: uppercase;
       margin: 0 0 7px 0;
-      @include transition-transform(0.35s);
-      .translate3d
-    (0, 200 %, 0);
+      transition: transform 0.35s;
+      transform: translate3d(0, 200%, 0);
     }
     .links {
       text-align: right;
       font-size: 13px;
       font-weight: bold;
-      @include transition-transform(0.35s);
-      .translate3d
-    (0, 200 %, 0);
+      transition: transform 0.35s;
+      transform: translate3d(0, 200%, 0);
       z-index: 3;
     }
     figcaption {
@@ -115,16 +102,16 @@
 
     &:hover {
       figcaption, h2, .links {
-        @include translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
       }
       &::after {
         opacity: 1;
       }
       .title {
-        @include transition-delay(0.1s);
+        transition-delay: 0.1s;
       }
       .links {
-        @include transition-delay(0.2s);
+        transition-delay: 0.2s;
       }
     }
   }
