--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,46 +1,6 @@
 @import "mixins";
-
-// Color Scheme
-$bg-body: #fff;
-$bg-accent: #f6f7f8;
-$bg-accent-inverted: #211F25;
-$bg-medium: #666;
-$bg-invert: #333;
-$bg-head: #1C2A42;
-
-$color-text: #333;
-$color-muted: #454545;
-$color-contrast: #151515;
-$color-invert: #f0f0f0;
-$color-accent: #3A89C9;
-
-$color-action: #DA4453;
-$color-action-hover: #E72B3E;
-$color-success: #94BA65;
-$color-info: #9CC4E4;
-$color-warning: #F0AD4E;
-$color-danger: #EB3729;
-
-$color-head: #fff;
-$color-titles: #454545;
-$color-headings: #454545;
-$color-links: $color-action;
-$color-links-hover: $color-action-hover;
-
-// Fonts
-$font-size: 15px;
-
-$font-text: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
-$font-nav: "Open sans", helvetica, "Helvetica Neue", arial;
-$font-head: Raleway, "Open sans", helvetica, "Helvetica Neue", arial;
-
-$font-titles: Raleway, "Open sans", helvetica, arial;
-$font-headings: "Open sans", helvetica, "Helvetica Neue", arial;
-
-// Various
-$radius: 3px;
-
 @import "constants";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Progressus Bootstrap theme
 @import "bootstrap-theme";
@@ -49,11 +9,16 @@ $radius: 3px;
 @import "portfolio";
 @import "blog";
 
-// Headers
+// Footer, Header and other components
 @import "headers";
+@import "footer";
+@import "pricing";
+@import "cta";
 
+// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 // Your site-specific styles
-// Put all your custom styles in that file, it's better to keep this one intact.
+// Put all your custom styles in that file, and keep this one intact.
+// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 @import "custom";
 
 
@@ -454,79 +419,9 @@ img.pull-left {
   }
 }
 
-/* Section: CTA
-******************************/
-.section-cta {
-  .btn-action {
-    top: 50%;
-    margin-top: -29px;
-    padding: 16px 0;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 18px;
-    @media (max-width: 480px) {
-      margin-top: 20px;
-    }
-  }
-  h2 {
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 12px;
-    span {
-      display: block;
-      margin-top: 20px;
-      font-size: 36px;
-      font-weight: 300;
-      text-transform: none;
-      line-height: 40px;
-    }
-  }
-  p {
-    font-size: 18px;
-    line-height: 1.5em;
-  }
-}
 
-.cta-simple {
-  display: table;
-  background: $bg-accent;
-  width: 100%;
-  border-radius: $radius;
-  @include box-sizing(border-box);
-  p {
-    display: table-cell;
-    padding: 26px 30px;
-    vertical-align: middle;
-  }
-  p:first-child {
-    font-size: 1.4em;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-  }
-  p + p {
-    text-align: center;
-  }
-  &.bordered {
-    border: 1px solid darken($bg-accent, 15%);
-    background: $bg-body;
-    p + p {
-      border-left: 1px solid darken($bg-accent, 15%);
-      background: $bg-accent;
-    }
-  }
-  @media (max-device-width: 480px) {
-    display: block;
-    p {
-      display: block;
-      padding: 20px 30px;
-      text-align: center;
-    }
-    &.bordered p + p {
-      border-left: 0 none;
-    }
-  }
-}
+
+
 
 /* Section: Sign In
 ******************************/
@@ -579,121 +474,6 @@ img.pull-left {
   font-weight: bold;
 }
 
-/*************************************************************************
-
-
-
-                         Pricing table styles
-
-
-
-**************************************************************************/
-.section-pricing {
-  .price-plan {
-    position: relative;
-    background: $bg-invert;
-    border-radius: $radius;
-    &.most-popular {
-      background: $color-action;
-    }
-    h2 {
-      font-size: 22px;
-      color: #fff;
-      font-weight: 200;
-      text-transform: uppercase;
-      letter-spacing: 4px;
-      text-align: center;
-      padding: 1em 0;
-      margin: 0;
-      &:after {
-        content: ' ';
-        display: block;
-        width: 222px;
-        margin: 20px auto 0;
-        height: 2px;
-        background: white;
-      }
-    }
-    p {
-      color: #fff;
-      color: rgba(255, 255, 255, .7);
-    }
-
-    .price {
-      padding: 8px 0 30px 0;
-      .inside {
-        font-weight: 100;
-        color: white;
-        text-align: center;
-        line-height: 100px;
-        height: 100px;
-        i, sub, sup {
-          font-size: 24px;
-          position: relative;
-          top: -64px;
-          left: -7px;
-          font-style: normal;
-        }
-        sup {
-          font-size: 27px;
-          letter-spacing: 4px;
-          top: -64px;
-          left: 10px;
-          opacity: @include 6;
-        }
-        sub {
-          letter-spacing: 4px;
-          top: 0px;
-          left: 0px;
-          opacity: @include 6;
-        }
-        b {
-          letter-spacing: -6px;
-          font-size: 114px;
-          margin-right: -6px;
-          font-weight: 300;
-          margin-left: -5px;
-          color: #fff;
-        }
-        .sub {
-          text-transform: uppercase;
-          font-size: 17px;
-          letter-spacing: 2px;
-          margin-left: -5px;
-        }
-      }
-    }
-
-    .info {
-      background: $bg-accent;
-      padding: 20px;
-      min-height: 7em;
-      p {
-        color: $color-text;
-        line-height: 1.2em;
-      }
-      ul {
-        margin: 30px 0 40px 0;
-        min-height: 10em;
-      }
-      li {
-        padding: 15px 0;
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid darken($bg-accent, 7%);
-        line-height: 1.2em;
-        text-align: center;
-      }
-      li:last-child {
-        border-bottom: none;
-        padding-bottom: 0;
-      }
-      li:first-child {
-        border-top: none;
-      }
-    }
-  }
-}
-
 /* Section "features" and similar ones, with icons on the side
 **************************************************************************/
 .info-icons-h {
@@ -715,7 +495,7 @@ img.pull-left {
       padding: 0 0 15px 0;
       font-weight: bold;
       letter-spacing: 2px;
-      opacity: @include 75;
+      opacity: .75;
       position: relative;
     }
     .caption:after {
@@ -781,80 +561,3 @@ img.pull-left {
   }
 }
 
-/*************************************************************************
-
-
-
-                            Footer styles
-
-
-
-**************************************************************************/
-.footer1 {
-  background: #232323;
-  padding: 30px 0 0 0;
-  font-size: 12px;
-  color: #999;
-  a {
-    color: #ccc;
-  }
-  a:hover {
-    color: #fff;
-  }
-  .widget {
-    margin-bottom: 30px;
-  }
-  .widget-title {
-    font-size: 17px;
-    font-weight: bold;
-    color: #ccc;
-    margin: 0 0 20px;
-  }
-  .entry-meta {
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    margin: 0 0 35px 0;
-    padding: 2px 0;
-    color: #888888;
-    font-size: 12px;
-    font-size: 0.75rem;
-    a {
-      color: #333333;
-    }
-    .meta-in {
-      border-top: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
-      padding: 10px 0;
-    }
-  }
-  .follow-me-icons {
-    font-size: 30px;
-  }
-  .follow-me-icons i {
-    float: left;
-    margin: 0 10px 0 0;
-  }
-}
-
-.footer2 {
-  background: #191919;
-  padding: 15px 0;
-  color: #777;
-  font-size: 12px;
-  a {
-    color: #aaa;
-  }
-  a:hover {
-    color: #fff;
-  }
-  p {
-    margin: 0;
-  }
-
-  .widget-simplenav {
-    margin-left: -5px;
-  }
-  .widget-simplenav a {
-    margin: 0 5px;
-  }
-}
