refactoring styles. WIP

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: "Open sans", helvetica, "Helvetica Neue", arial;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
 
 *,
@@ -55,7 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Open sans", helvetica, "Helvetica Neue", arial;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -4154,7 +4154,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Open sans", helvetica, "Helvetica Neue", arial;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4239,7 +4239,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Open sans", helvetica, "Helvetica Neue", arial;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6807,343 +6807,6 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-/* Navigation */
-.navbar {
-  background: #fff;
-  margin-bottom: 0;
-  border-bottom: 0 none;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3); }
-  .navbar.ontop-now {
-    box-shadow: none;
-    background: transparent;
-    border-bottom: 1px solid #d9dee2; }
-  .navbar.no-border {
-    border-bottom: 0 none; }
-  .navbar .navbar-toggle {
-    border-color: transparent;
-    background: transparent;
-    border-radius: 3px; }
-    .navbar .navbar-toggle:hover {
-      background: transparent;
-      border-color: transparent; }
-    .navbar .navbar-toggle .icon-bar {
-      background: #333; }
-  @media (max-width: 480px) {
-    .navbar .navbar-collapse.collapse.in {
-      background: #fff; } }
-  .navbar .navbar-nav {
-    font-family: "Open sans", helvetica, "Helvetica Neue", arial; }
-    .navbar .navbar-nav > li > a {
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 13px; }
-    .navbar .navbar-nav > li > a,
-    .navbar .navbar-nav > .open ul > a {
-      color: #4d4d4d;
-      background: none; }
-    .navbar .navbar-nav > li > a:hover,
-    .navbar .navbar-nav > li > a:focus,
-    .navbar .navbar-nav > .open > a:hover,
-    .navbar .navbar-nav > .open > a:focus,
-    .navbar .navbar-nav > .active > a {
-      background: none;
-      color: #DA4453; }
-    .navbar .navbar-nav .dropdown-menu {
-      font-size: 13px;
-      border-radius: 0px;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
-      .navbar .navbar-nav .dropdown-menu > li > a {
-        color: #333;
-        padding: 7px 20px; }
-      .navbar .navbar-nav .dropdown-menu > li > a:hover,
-      .navbar .navbar-nav .dropdown-menu > li > a:focus,
-      .navbar .navbar-nav .dropdown-menu > .active > a:hover,
-      .navbar .navbar-nav .dropdown-menu > .active > a,
-      .navbar .navbar-nav .dropdown-menu > .active > a:focus {
-        background: none;
-        color: #DA4453; }
-  .navbar .navbar-brand {
-    font-family: "Open sans", helvetica, arial;
-    font-size: 24px;
-    color: #333;
-    padding: 0 0 0 15px;
-    margin: 12px 0 0 0;
-    height: auto; }
-    .navbar .navbar-brand img {
-      margin-top: -8px; }
-    .navbar .navbar-brand img {
-      display: none; }
-    .navbar .navbar-brand img.secondary {
-      display: block; }
-
-.navbar-inverse {
-  background: #1C2A42;
-  border-radius: 0;
-  border-bottom: 0 none;
-  box-shadow: none; }
-  .navbar-inverse.ontop-now {
-    border-bottom: 0 none; }
-  .navbar-inverse.headroom.ontop-now {
-    background: transparent;
-    border-bottom: 0 none; }
-  .navbar-inverse .navbar-toggle {
-    border-color: transparent;
-    background: transparent; }
-    .navbar-inverse .navbar-toggle:hover {
-      background: rgba(255, 255, 255, 0.25); }
-    .navbar-inverse .navbar-toggle .icon-bar {
-      background: #f0f0f0;
-      opacity: .75; }
-  .navbar-inverse *:focus {
-    outline: 0; }
-  @media (max-width: 767px) {
-    .navbar-inverse {
-      background: rgba(0, 0, 0, 0.9); } }
-  @media (max-width: 480px) {
-    .navbar-inverse .navbar-collapse.collapse.in {
-      background: #1C2A42; } }
-  .navbar-inverse .navbar-nav > li > a,
-  .navbar-inverse .navbar-nav > .open ul > a {
-    color: rgba(255, 255, 255, 0.7); }
-  .navbar-inverse .navbar-nav > .active > a,
-  .navbar-inverse .navbar-nav > .active > a:hover,
-  .navbar-inverse .navbar-nav > .active > a:focus {
-    color: #fff;
-    background: none; }
-  .navbar-inverse .navbar-nav > .open > a {
-    background: none;
-    color: white; }
-  .navbar-inverse .navbar-nav > li > a:hover,
-  .navbar-inverse .navbar-nav > li > a:focus,
-  .navbar-inverse .navbar-nav > .open > a:hover,
-  .navbar-inverse .navbar-nav > .open > a:focus {
-    background: none;
-    color: white; }
-  .navbar-inverse .navbar-nav > .active > a {
-    background: none;
-    color: white; }
-  .navbar-inverse .navbar-nav .dropdown-menu {
-    left: -5px;
-    font-size: 13px;
-    background-color: #1A1E24;
-    border: 0 none;
-    border-radius: 3px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
-    .navbar-inverse .navbar-nav .dropdown-menu > li > a {
-      color: rgba(255, 255, 255, 0.7);
-      padding: 7px 20px; }
-    .navbar-inverse .navbar-nav .dropdown-menu > li > a:hover,
-    .navbar-inverse .navbar-nav .dropdown-menu > li > a:focus,
-    .navbar-inverse .navbar-nav .dropdown-menu > .active > a:hover {
-      background: rgba(255, 255, 255, 0.1);
-      color: white; }
-    .navbar-inverse .navbar-nav .dropdown-menu > .active > a,
-    .navbar-inverse .navbar-nav .dropdown-menu > .active > a:focus {
-      background: none;
-      color: #fff; }
-  .navbar-inverse .navbar-brand {
-    color: white; }
-    .navbar-inverse .navbar-brand img {
-      display: block; }
-    .navbar-inverse .navbar-brand img.secondary {
-      display: none; }
-
-.navbar-nav .btn {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  margin-left: 5px;
-  margin-top: 5px;
-  padding-top: 10px;
-  padding-bottom: 10px; }
-  .navbar-nav .btn:focus, .navbar-nav .btn:hover {
-    border: 1px solid rgba(0, 0, 0, 0.6); }
-
-.navbar-inverse .navbar-nav .btn {
-  border: 1px solid rgba(255, 255, 255, 0.2); }
-  .navbar-inverse .navbar-nav .btn:focus, .navbar-inverse .navbar-nav .btn:hover {
-    border: 1px solid rgba(255, 255, 255, 0.6); }
-
-.navbar-collapse {
-  border: 0 none;
-  border-top: 0 none;
-  box-shadow: none; }
-
-@media (max-width: 767px) {
-  .navbar-collapse ul {
-    text-align: center;
-    width: 100%;
-    padding-bottom: 10px; }
-  .navbar-collapse ul .btn {
-    max-width: 50%;
-    margin: 0 auto; } }
-
-.navbar {
-  border-radius: 0;
-  padding: 12px 0; }
-
-/* Buttons */
-.btn {
-  padding: 9px 40px;
-  font-weight: bold;
-  border-radius: 3px; }
-
-.btn-lg, .btn-group-lg > .btn {
-  padding: 14px 65px; }
-
-.btn-default {
-  text-shadow: none;
-  background: #333;
-  border-color: #333;
-  color: #f0f0f0; }
-  .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active {
-    background: #4d4d4d;
-    border-color: #4d4d4d;
-    color: #f0f0f0; }
-
-.btn-action,
-.btn-primary {
-  color: #212529;
-  background-color: #fff;
-  border-color: #DA4453; }
-  .btn-action:hover,
-  .btn-primary:hover {
-    color: #fff;
-    background-color: #DA4453;
-    border-color: #c42737; }
-  .btn-action:focus, .btn-action.focus,
-  .btn-primary:focus,
-  .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(218, 68, 83, 0.5); }
-  .btn-action.disabled, .btn-action:disabled,
-  .btn-primary.disabled,
-  .btn-primary:disabled {
-    color: #212529;
-    background-color: #fff;
-    border-color: #DA4453; }
-  .btn-action:not(:disabled):not(.disabled):active, .btn-action:not(:disabled):not(.disabled).active,
-  .show > .btn-action.dropdown-toggle,
-  .btn-primary:not(:disabled):not(.disabled):active,
-  .btn-primary:not(:disabled):not(.disabled).active,
-  .show >
-  .btn-primary.dropdown-toggle {
-    color: #212529;
-    background-color: #e6e6e6;
-    border-color: #ba2534; }
-    .btn-action:not(:disabled):not(.disabled):active:focus, .btn-action:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-action.dropdown-toggle:focus,
-    .btn-primary:not(:disabled):not(.disabled):active:focus,
-    .btn-primary:not(:disabled):not(.disabled).active:focus,
-    .show >
-    .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(218, 68, 83, 0.5); }
-
-.btn-action.btn-ghost {
-  border-color: #DA4453;
-  color: #DA4453;
-  background: transparent; }
-  .btn-action.btn-ghost:hover, .btn-action.btn-ghost:focus, .btn-action.btn-ghost:active {
-    border-color: #E72B3E;
-    color: #fff;
-    background: #E72B3E; }
-
-.btn-success {
-  color: #212529;
-  background-color: #fff;
-  border-color: #94BA65; }
-  .btn-success:hover {
-    color: #212529;
-    background-color: #94BA65;
-    border-color: #7ba349; }
-  .btn-success:focus, .btn-success.focus {
-    box-shadow: 0 0 0 0.2rem rgba(148, 186, 101, 0.5); }
-  .btn-success.disabled, .btn-success:disabled {
-    color: #212529;
-    background-color: #fff;
-    border-color: #94BA65; }
-  .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
-  .show > .btn-success.dropdown-toggle {
-    color: #212529;
-    background-color: #e6e6e6;
-    border-color: #749a45; }
-    .btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-success.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(148, 186, 101, 0.5); }
-
-.btn-info {
-  color: #212529;
-  background-color: #fff;
-  border-color: #9CC4E4; }
-  .btn-info:hover {
-    color: #212529;
-    background-color: #9CC4E4;
-    border-color: #74acd9; }
-  .btn-info:focus, .btn-info.focus {
-    box-shadow: 0 0 0 0.2rem rgba(156, 196, 228, 0.5); }
-  .btn-info.disabled, .btn-info:disabled {
-    color: #212529;
-    background-color: #fff;
-    border-color: #9CC4E4; }
-  .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
-  .show > .btn-info.dropdown-toggle {
-    color: #212529;
-    background-color: #e6e6e6;
-    border-color: #6aa6d6; }
-    .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-info.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(156, 196, 228, 0.5); }
-
-.btn-warning {
-  color: #212529;
-  background-color: #fff;
-  border-color: #F0AD4E; }
-  .btn-warning:hover {
-    color: #212529;
-    background-color: #F0AD4E;
-    border-color: #ec971f; }
-  .btn-warning:focus, .btn-warning.focus {
-    box-shadow: 0 0 0 0.2rem rgba(240, 173, 78, 0.5); }
-  .btn-warning.disabled, .btn-warning:disabled {
-    color: #212529;
-    background-color: #fff;
-    border-color: #F0AD4E; }
-  .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
-  .show > .btn-warning.dropdown-toggle {
-    color: #212529;
-    background-color: #e6e6e6;
-    border-color: #ea9214; }
-    .btn-warning:not(:disabled):not(.disabled):active:focus, .btn-warning:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-warning.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(240, 173, 78, 0.5); }
-
-.btn-danger {
-  color: #212529;
-  background-color: #fff;
-  border-color: #EB3729; }
-  .btn-danger:hover {
-    color: #fff;
-    background-color: #EB3729;
-    border-color: #ce2113; }
-  .btn-danger:focus, .btn-danger.focus {
-    box-shadow: 0 0 0 0.2rem rgba(235, 55, 41, 0.5); }
-  .btn-danger.disabled, .btn-danger:disabled {
-    color: #212529;
-    background-color: #fff;
-    border-color: #EB3729; }
-  .btn-danger:not(:disabled):not(.disabled):active, .btn-danger:not(:disabled):not(.disabled).active,
-  .show > .btn-danger.dropdown-toggle {
-    color: #212529;
-    background-color: #e6e6e6;
-    border-color: #c21f12; }
-    .btn-danger:not(:disabled):not(.disabled):active:focus, .btn-danger:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-danger.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(235, 55, 41, 0.5); }
-
-.btn-rounded {
-  border-radius: 20px; }
-
-.input-group .btn {
-  padding-left: 12px;
-  padding-right: 12px; }
-
 /* Jumbotron */
 .jumbotron {
   color: #333;
@@ -7167,9 +6830,6 @@ a.text-dark:hover, a.text-dark:focus {
   border-radius: 3px;
   padding-left: 40px;
   padding-right: 40px; }
-
-.jumbotron p {
-  font-size: 15px; }
 
 .jumbotron h2, .jumbotron h3, .jumbotron h4,
 .jumbotron h5, .jumbotron h6 {
@@ -7279,7 +6939,7 @@ legend {
     .gallery figure .title {
       text-align: left;
       font-size: 14px;
-      font-family: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
+      font-family: "Open sans", helvetica, "Helvetica Neue", arial;
       color: #333;
       z-index: 3;
       font-weight: bold;
@@ -7470,7 +7130,6 @@ legend {
     color: #fff;
     line-height: 1.15em; }
   .head-default .tagline {
-    font-family: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
@@ -7516,12 +7175,14 @@ legend {
     line-height: 1.25em;
     text-transform: uppercase; }
     .head-inner .page-title small {
+      display: inline-block;
       margin: 0;
       font-weight: 400;
       line-height: 1.25em;
       font-size: 25px;
       color: #fff;
-      opacity: 0.8; }
+      text-transform: none;
+      opacity: .7; }
   @media (max-width: 480px) {
     .head-inner {
       padding: 120px 0 60px 0;
@@ -7542,7 +7203,7 @@ legend {
   letter-spacing: 2px; }
   .page-title span {
     display: block;
-    font-family: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
+    font-family: "Open sans", helvetica, "Helvetica Neue", arial;
     font-size: 15px;
     line-height: 1.3em;
     font-weight: 400;
@@ -7554,11 +7215,12 @@ legend {
       font-size: 48px; } }
 
 /* Autohide navbar */
-.slideUp {
+.headroom--unpinned {
   top: -100px; }
 
 .headroom {
-  transition: all 0.4s ease-out; }
+  transition: all 0.2s ease-in-out;
+  transition-duration: .4s; }
 
 /* Page-specific headers */
 .page-services .head-inner {
@@ -7609,7 +7271,7 @@ legend {
       font-size: 23px;
       font-weight: normal; }
   .head-soft .intro {
-    font-family: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
+    font-family: "Open sans", helvetica, "Helvetica Neue", arial;
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
@@ -7857,17 +7519,8 @@ legend {
       .cta-simple.bordered p + p {
         border-left: 0 none; } }
 
-body {
-  color: #333;
-  background: #fff;
-  font-family: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
-  font-size: 15px;
-  line-height: 1.5; }
-
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Open sans", helvetica, "Helvetica Neue", arial;
-  color: #454545;
   margin: 30px 0 15px 0;
   line-height: 1.1; }
 
@@ -7963,6 +7616,127 @@ hr {
 
 .color-default {
   color: #333; }
+
+.navbar {
+  background: #fff;
+  margin-bottom: 0;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3); }
+  .navbar.ontop-now {
+    box-shadow: none;
+    background: transparent;
+    padding-top: 15px; }
+    .navbar.ontop-now .navbar-nav > li > a {
+      color: rgba(255, 255, 255, 0.8); }
+  .navbar .navbar-toggle {
+    border-color: transparent;
+    background: transparent;
+    border-radius: 3px; }
+    .navbar .navbar-toggle:hover {
+      background: transparent;
+      border-color: transparent; }
+    .navbar .navbar-toggle .icon-bar {
+      background: #333; }
+  @media (max-width: 480px) {
+    .navbar .navbar-collapse.collapse.in {
+      background: #fff; } }
+  .navbar .navbar-nav > li > a {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 13px; }
+  .navbar .navbar-nav > li > a,
+  .navbar .navbar-nav > .open ul > a {
+    color: #4d4d4d;
+    background: none; }
+  .navbar .navbar-nav > li > a:hover,
+  .navbar .navbar-nav > li > a:focus,
+  .navbar .navbar-nav > .open > a:hover,
+  .navbar .navbar-nav > .open > a:focus,
+  .navbar .navbar-nav > .active > a {
+    background: none;
+    color: #DA4453; }
+  .navbar .navbar-nav .dropdown-menu {
+    font-size: 13px;
+    border-radius: 0px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
+    .navbar .navbar-nav .dropdown-menu > li > a {
+      color: #333;
+      padding: 7px 20px; }
+    .navbar .navbar-nav .dropdown-menu > li > a:hover,
+    .navbar .navbar-nav .dropdown-menu > li > a:focus,
+    .navbar .navbar-nav .dropdown-menu > .active > a:hover,
+    .navbar .navbar-nav .dropdown-menu > .active > a,
+    .navbar .navbar-nav .dropdown-menu > .active > a:focus {
+      background: none;
+      color: #DA4453; }
+  .navbar .navbar-brand {
+    font-size: 24px;
+    color: #333;
+    padding: 0 0 0 15px;
+    margin: 12px 0 0 0;
+    height: auto; }
+    .navbar .navbar-brand img {
+      margin-top: -8px; }
+    .navbar .navbar-brand img {
+      display: none; }
+    .navbar .navbar-brand img.secondary {
+      display: block; }
+
+.navbar-nav .btn {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-left: 5px;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  .navbar-nav .btn:focus, .navbar-nav .btn:hover {
+    border: 1px solid rgba(0, 0, 0, 0.6); }
+
+.navbar-collapse {
+  border: 0 none;
+  border-top: 0 none;
+  box-shadow: none; }
+  @media (max-width: 991.98px) {
+    .navbar-collapse ul {
+      text-align: center;
+      width: 100%;
+      padding-bottom: 10px; } }
+  @media (max-width: 991.98px) {
+    .navbar-collapse ul .btn {
+      max-width: 50%;
+      margin: 0 auto; } }
+
+.btn {
+  padding: 9px 40px;
+  font-weight: bold;
+  border-radius: 3px; }
+
+.btn-lg, .btn-group-lg > .btn {
+  padding: 14px 65px; }
+
+.btn-default {
+  text-shadow: none;
+  background: #333;
+  border-color: #333;
+  color: #f0f0f0; }
+  .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active {
+    background: #4d4d4d;
+    border-color: #4d4d4d;
+    color: #f0f0f0; }
+
+.btn-action.btn-ghost {
+  border-color: #DA4453;
+  color: #DA4453;
+  background: transparent; }
+  .btn-action.btn-ghost:hover, .btn-action.btn-ghost:focus, .btn-action.btn-ghost:active {
+    border-color: #E72B3E;
+    color: #fff;
+    background: #E72B3E; }
+
+.btn-rounded {
+  border-radius: 20px; }
+
+.input-group .btn {
+  padding-left: 12px;
+  padding-right: 12px; }
 
 /* social profile icons */
 .social-icons {
