--- a/assets/scss/constants.scss
+++ b/assets/scss/constants.scss
@@ -25,13 +25,8 @@ $color-headings: #454545;
 $color-links: $color-action;
 $color-links-hover: $color-action-hover;
 
-// Fonts
-$font-size: 15px;
-
-$font-text: helvetica, "Helvetica Neue", "Open Sans", Arial, sans-serif;
-$font-nav: "Open sans", helvetica, "Helvetica Neue", arial;
+$font-family-sans-serif: "Open sans", helvetica, "Helvetica Neue", arial;
 $font-head: Raleway, "Open sans", helvetica, "Helvetica Neue", arial;
-
 $font-titles: Raleway, "Open sans", helvetica, arial;
 $font-headings: "Open sans", helvetica, "Helvetica Neue", arial;
 
