--- a/assets/scss/headers.scss
+++ b/assets/scss/headers.scss
@@ -27,7 +27,6 @@
     line-height: 1.15em;
   }
   .tagline {
-    font-family: $font-text;
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
@@ -87,12 +86,14 @@
     text-transform: uppercase;
 
     small {
+      display: inline-block;
       margin: 0;
       font-weight: 400;
       line-height: 1.25em;
       font-size: 25px;
       color: $color-head;
-      opacity: 0.8;
+      text-transform: none;
+      opacity: .7;
     }
   }
 
@@ -118,9 +119,10 @@
   font-size: 72px;
   line-height: 1.1em;
   letter-spacing: 2px;
+
   span {
     display: block;
-    font-family: $font-text;
+    font-family: $font-family-base;
     font-size: 15px;
     line-height: 1.3em;
     font-weight: 400;
@@ -134,15 +136,13 @@
 }
 
 /* Autohide navbar */
-.slideUp {
+.headroom--unpinned {
   top: -100px;
 }
 
 .headroom {
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  -o-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
+  transition: $transition-base;
+  transition-duration: .4s;
 }
 
 /* Page-specific headers */
@@ -202,7 +202,7 @@
     }
   }
   .intro {
-    font-family: $font-text;
+    font-family: $font-family-base;
     font-weight: normal;
     margin-bottom: 25px;
     font-size: 15px;
