--- a/assets/scss/portfolio.scss
+++ b/assets/scss/portfolio.scss
@@ -74,7 +74,7 @@
     .title {
       text-align: left;
       font-size: 14px;
-      font-family: $font-text;
+      font-family: $font-family-base;
       color: $color-text;
       z-index: 3;
       font-weight: bold;
