--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -14,6 +14,9 @@
 @import "pricing";
 @import "cta";
 @import "typography";
+@import "mainnav";
+@import "btns";
+
 
 // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 // Your site-specific styles
