--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7323,23 +7323,23 @@ legend {
     #soft-illustration {
       display: none; } }
 
-.footer1 {
+.footer {
   background: #232323;
   padding: 30px 0 0 0;
   font-size: 12px;
   color: #999; }
-  .footer1 a {
+  .footer a {
     color: #ccc; }
-  .footer1 a:hover {
+  .footer a:hover {
     color: #fff; }
-  .footer1 .widget {
+  .footer__widget {
     margin-bottom: 30px; }
-  .footer1 .widget-title {
+  .footer__widget-title {
     font-size: 17px;
     font-weight: bold;
     color: #ccc;
     margin: 0 0 20px; }
-  .footer1 .entry-meta {
+  .footer .entry-meta {
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     margin: 0 0 35px 0;
@@ -7347,33 +7347,47 @@ legend {
     color: #888888;
     font-size: 12px;
     font-size: 0.75rem; }
-    .footer1 .entry-meta a {
+    .footer .entry-meta a {
       color: #333333; }
-    .footer1 .entry-meta .meta-in {
+    .footer .entry-meta .meta-in {
       border-top: 1px solid #ccc;
       border-bottom: 1px solid #ccc;
       padding: 10px 0; }
-  .footer1 .follow-me-icons {
+  .footer .follow-me-icons {
     font-size: 30px; }
-  .footer1 .follow-me-icons i {
+  .footer .follow-me-icons i {
     float: left;
     margin: 0 10px 0 0; }
 
-.footer2 {
+.footer-extra {
   background: #191919;
   padding: 15px 0;
   color: #777;
   font-size: 12px; }
-  .footer2 a {
+  .footer-extra a {
     color: #aaa; }
-  .footer2 a:hover {
-    color: #fff; }
-  .footer2 p {
+    .footer-extra a:hover {
+      color: #fff; }
+  .footer-extra .menu {
+    list-style: none;
+    padding: 0;
     margin: 0; }
-  .footer2 .widget-simplenav {
-    margin-left: -5px; }
-  .footer2 .widget-simplenav a {
-    margin: 0 5px; }
+    .footer-extra .menu .menu-item {
+      display: inline; }
+      .footer-extra .menu .menu-item + .menu-item {
+        margin-left: 1rem;
+        position: relative; }
+        .footer-extra .menu .menu-item + .menu-item:after {
+          content: ' ';
+          position: absolute;
+          width: 1px;
+          height: 1rem;
+          left: -.5rem;
+          top: .1rem;
+          background: #fff;
+          opacity: .4; }
+    .footer-extra .menu .nav-link {
+      padding: 0; }
 
 .section-pricing .price-plan {
   position: relative;
