--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,18 +1,22 @@
-.footer1 {
+.footer {
   background: #232323;
   padding: 30px 0 0 0;
   font-size: 12px;
   color: #999;
+
   a {
     color: #ccc;
   }
+
   a:hover {
     color: #fff;
   }
-  .widget {
+
+  &__widget {
     margin-bottom: 30px;
   }
-  .widget-title {
+
+  &__widget-title {
     font-size: 17px;
     font-weight: bold;
     color: #ccc;
@@ -44,25 +48,43 @@
   }
 }
 
-.footer2 {
+.footer-extra {
   background: #191919;
   padding: 15px 0;
   color: #777;
   font-size: 12px;
+
   a {
     color: #aaa;
-  }
-  a:hover {
-    color: #fff;
-  }
-  p {
-    margin: 0;
+    &:hover {
+      color: #fff;
+    }
   }
 
-  .widget-simplenav {
-    margin-left: -5px;
-  }
-  .widget-simplenav a {
-    margin: 0 5px;
+  .menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    .menu-item {
+      display: inline;
+      & + .menu-item {
+        margin-left: 1rem;
+        position: relative;
+        &:after {
+          content: ' ';
+          position: absolute;
+          width: 1px;
+          height: 1rem;
+          left: -.5rem;
+          top: .1rem;
+          background: $white;
+          opacity: .4;
+        }
+      }
+    }
+    .nav-link {
+      padding: 0;
+    }
   }
 }
