Sidebar is on its place in page template

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,14 +8,18 @@
 @import "portfolio";
 @import "blog";
 
+@import "layout";
+
 // Footer, Header and other components
 @import "headers";
 @import "footer";
 @import "pricing";
 @import "cta";
-@import "typography";
 @import "mainnav";
 @import "btns";
+
+@import "typography";
+
 
 
 // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
