--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7175,14 +7175,17 @@ legend {
     line-height: 1.25em;
     text-transform: uppercase; }
     .head-inner .page-title small {
-      display: inline-block;
-      margin: 0;
+      display: block;
+      margin: 8px auto 0 auto;
       font-weight: 400;
       line-height: 1.25em;
       font-size: 25px;
       color: #fff;
       text-transform: none;
-      opacity: .7; }
+      opacity: .8; }
+      @media (min-width: 992px) {
+        .head-inner .page-title small {
+          max-width: 80%; } }
   @media (max-width: 480px) {
     .head-inner {
       padding: 120px 0 60px 0;
