--- a/assets/scss/headers.scss
+++ b/assets/scss/headers.scss
@@ -86,20 +86,24 @@
     text-transform: uppercase;
 
     small {
-      display: inline-block;
-      margin: 0;
+      display: block;
+      margin: 8px auto 0 auto;
       font-weight: 400;
       line-height: 1.25em;
       font-size: 25px;
       color: $color-head;
       text-transform: none;
-      opacity: .7;
+      opacity: .8;
+      @include media-breakpoint-up(lg) {
+        max-width: 80%;
+      }
     }
   }
 
   @media (max-width: 480px) {
     padding: 120px 0 60px 0;
     min-height: inherit;
+
     .page-title {
       font-size: 30px;
 
